Fixes #486: delete entries in async mode